syntax = "proto3";

package com.intellistart.interviewplanning.request.slot.get_all.proto;

option java_multiple_files = true;

import "com/intellistart/interviewplanning/commonmodels/slot/slot.proto";

message GetAllSlotsRequest {
    string email = 5;
}

message GetAllSlotsResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        commonmodels.slot.Slots slots = 1;
    }

    message Failure {
      string message = 1;
    }
}
